style.css
body {
    font-size: 1.6rem;
    scroll-behavior: smooth;
}

.thumbnail {
    /* max-width: 100%; */
    min-height: 20rem;
    max-height: 20rem;
    /* width: auto; */
    padding: .5rem;
}

.page-container {
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
    gap: .5rem;
}
#prev, #next {
    align-self: center;
}

#pages {
    display: flex;
    flex-flow: row wrap;
    gap: .5rem;
    justify-content: center;
}
li {
    list-style-position: outside;
    /* display: flex;
    flex-flow: row wrap; */
}
.container {
    display: flex;
    flex-flow: row wrap;
}
.read, .tbr, .delete {
    border-radius: 40%;
    padding: .5rem;
    transition: background-color .1s ease-in-out;
}
.read:active, .tbr:active, .delete:active {
    background-color: red;
}
.desc-short{
    margin: 0;
    max-height: 20.5rem;
    overflow-y: hidden;
}
.desc-long{
    margin: 0;
    max-height: fit-content;
    overflow-y: visible;
}
.more-less {
    cursor: pointer;
    color:blue;
    text-decoration: underline;
    align-self: flex-end;
}

.information {
    max-width: 40rem;
    display: flex;
    flex-flow: column nowrap;
}

/* wanted to style first word to be bold, but it takes whole line, need to change------------------- */
/* .descriptor {
    font-weight: bold;
} */

